--- a/apps/backend/composer.json
+++ b/apps/backend/composer.json
@@ -3,6 +3,7 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
+    "version": "0.1.0",
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
