--- a/apps/editor/Dockerfile.prod
+++ b/apps/editor/Dockerfile.prod
@@ -29,6 +29,6 @@ RUN pnpm --filter editor build
 FROM nginx:stable-alpine as production-stage
 COPY --from=build-stage /app/dist /usr/share/nginx/html
 # Custom Nginx config to handle SPA routing
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY apps/editor/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
