--- a/apps/client/Dockerfile.prod
+++ b/apps/client/Dockerfile.prod
@@ -27,7 +27,7 @@ RUN pnpm --filter client exec vite build
 
 # Production Stage
 FROM nginx:stable-alpine as production-stage
-COPY --from=build-stage /app/dist /usr/share/nginx/html
+COPY --from=build-stage /app/apps/client/dist /usr/share/nginx/html
 # Custom Nginx config to handle SPA routing
 COPY apps/client/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
