feat: Integrate GOOGLE_CLIENT_ID and VITE_GOOGLE_CLIENT_ID into production build

--- a/apps/backend/Dockerfile.prod
+++ b/apps/backend/Dockerfile.prod
@@ -30,3 +30,8 @@ RUN chown -R www-data:www-data /var/www/html
 
 # Switch to non-root user
 USER www-data
+
+# Make bootstrap/cache directory
+RUN mkdir -p bootstrap/cache
+RUN chmod -R 777 bootstrap/cache
+
