--- a/apps/editor/Dockerfile.prod
+++ b/apps/editor/Dockerfile.prod
@@ -21,6 +21,8 @@ RUN pnpm install
 # Vite needs env vars at build time
 ARG VITE_API_BASE_URL
 ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
+ARG VITE_GOOGLE_CLIENT_ID
+ENV VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID
 
 # Run build from root using filter (Skip vue-tsc for production build reliability)
 RUN pnpm --filter editor exec vite build
