fix: Add missing GOOGLE_CLIENT_ID to scheduler service (correction)

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -115,6 +115,7 @@ services:
       - DB_DATABASE=${DB_DATABASE}
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
     depends_on:
       - backend
     networks:
