--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,15 @@ Thumbs.db
 
 # Environment
 .env
+.env.*
 .env.local
 .env.*.local
+
+# Android Secrets & Builds
+*.jks
+*.apk
+*.aab
+
 
 # Laravel
 apps/backend/vendor/
