--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -85,6 +85,8 @@ services:
     command: php artisan queue:work --tries=3 --timeout=90
     environment:
       - APP_ENV=production
+      - APP_KEY=${APP_KEY}
+      - APP_URL=${APP_URL}
       - DB_CONNECTION=mysql
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
@@ -109,6 +111,8 @@ services:
     command: php artisan schedule:work
     environment:
       - APP_ENV=production
+      - APP_KEY=${APP_KEY}
+      - APP_URL=${APP_URL}
       - DB_CONNECTION=mysql
       - DB_HOST=${DB_HOST}
       - DB_PORT=${DB_PORT}
