--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -25,8 +25,10 @@ services:
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
+      # Performance optimizations
+      - PHP_OPCACHE_ENABLE=1
     healthcheck:
-      test: ["CMD", "php", "artisan", "optimize:clear"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -94,6 +96,7 @@ services:
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - PHP_OPCACHE_ENABLE=1
     depends_on:
       - backend
     networks:
@@ -120,6 +123,7 @@ services:
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - PHP_OPCACHE_ENABLE=1
     depends_on:
       - backend
     networks:
