feat: migrate backend to Laravel Octane + FrankenPHP worker mode
- Replace serversideup/php:8.3-fpm-nginx with dunglas/frankenphp
- Install laravel/octane with FrankenPHP driver
- Enable DisconnectFromDatabases and CollectGarbage listeners
- Add --max-requests=500 for memory leak prevention
- Add automated Octane safety audit CI workflow
- Override entrypoint for worker/scheduler services

--- a/apps/backend/Dockerfile.prod
+++ b/apps/backend/Dockerfile.prod
@@ -1,31 +1,28 @@
-FROM serversideup/php:8.3-fpm-nginx-alpine
+FROM dunglas/frankenphp:latest-php8.3-alpine
+
+# Install PHP extensions required by Laravel
+RUN install-php-extensions \
+    pcntl \
+    gd \
+    zip \
+    intl \
+    bcmath \
+    pdo_mysql \
+    opcache
 
 # Set working directory
 WORKDIR /var/www/html
 
-# Install additional extensions if needed (e.g. for queues, redis, db)
-# serversideup image includes most common extensions by default
-# If you need more: RUN install-php-extensions <ext-name>
-
-# Install additional extensions
-# gd and zip are required for maatwebsite/excel
-# pdo_mysql for database
-# bcmath and intl are common laravel requirements
-USER root
-RUN install-php-extensions gd zip intl bcmath pdo_mysql opcache
-
-# Copy Composer dependencies
+# Copy Composer files first for layer caching
 COPY composer.json composer.lock ./
 
 # Install dependencies
-# --no-scripts: Skip post-install scripts (like artisan package:discover) to avoid errors during build
-# --ignore-platform-reqs: Avoid issues if lock file was generated on Windows
 RUN composer install --no-dev --no-interaction --prefer-dist --optimize-autoloader --ignore-platform-reqs --no-scripts
 
-# Copy Application Code
+# Copy application code
 COPY . .
 
-# Run post-install scripts (package discovery, etc.)
+# Run post-install scripts
 RUN composer dump-autoload --optimize
 
 # Create required directories
@@ -34,5 +31,8 @@ RUN mkdir -p storage/logs storage/framework/cache storage/framework/sessions sto
 # Set permissions
 RUN chown -R www-data:www-data /var/www/html
 
-# Switch to non-root user
-USER www-data
+# Expose FrankenPHP port
+EXPOSE 8080
+
+# Start Octane with FrankenPHP worker mode
+ENTRYPOINT ["php", "artisan", "octane:frankenphp", "--host=0.0.0.0", "--port=8080", "--max-requests=500"]
