--- a/apps/backend/composer.json
+++ b/apps/backend/composer.json
@@ -10,6 +10,7 @@
         "php": "^8.2",
         "google/apiclient": "^2.19",
         "laravel/framework": "^12.0",
+        "laravel/octane": "^2.13",
         "laravel/reverb": "*",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
