--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,6 +27,7 @@ services:
       - VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}
       # Performance optimizations
       - PHP_OPCACHE_ENABLE=1
+      - OCTANE_SERVER=frankenphp
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/api/health"]
       interval: 30s
@@ -84,7 +85,8 @@ services:
       context: ./apps/backend
       dockerfile: Dockerfile.prod
     restart: always
-    command: php artisan queue:work --tries=3 --timeout=90
+    entrypoint: ["php"]
+    command: ["artisan", "queue:work", "--tries=3", "--timeout=90"]
     environment:
       - APP_ENV=production
       - APP_KEY=${APP_KEY}
@@ -111,7 +113,8 @@ services:
       context: ./apps/backend
       dockerfile: Dockerfile.prod
     restart: always
-    command: php artisan schedule:work
+    entrypoint: ["php"]
+    command: ["artisan", "schedule:work"]
     environment:
       - APP_ENV=production
       - APP_KEY=${APP_KEY}
