--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint --config ../../eslint.config.js src/"
   },
   "dependencies": {
     "@capacitor-community/sqlite": "^7.0.3",
