--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint --config ../../eslint.config.js src/"
   },
   "dependencies": {
     "@cerdas/form-engine": "workspace:^",
