fix(docker): add Composer to FrankenPHP image (exit code 127 = command not found)

--- a/apps/backend/Dockerfile.prod
+++ b/apps/backend/Dockerfile.prod
@@ -10,6 +10,9 @@ RUN install-php-extensions \
     pdo_mysql \
     opcache
 
+# Install Composer
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+
 # Set working directory
 WORKDIR /var/www/html
 
