--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "build:editor": "pnpm --filter editor build",
     "lint": "pnpm -r lint",
     "test": "pnpm -r test",
-    "typecheck": "pnpm -r typecheck"
+    "typecheck": "pnpm -r typecheck",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "typescript": "^5.4.0"
   },
   "packageManager": "pnpm@9.0.0",
