fix(backend): skip scripts in composer dump-autoload during docker build

--- a/apps/backend/Dockerfile.prod
+++ b/apps/backend/Dockerfile.prod
@@ -26,7 +26,7 @@ RUN composer install --no-dev --no-interaction --prefer-dist --optimize-autoload
 COPY . .
 
 # Run post-install scripts
-RUN composer dump-autoload --optimize
+RUN composer dump-autoload --optimize --no-scripts
 
 # Create required directories
 RUN mkdir -p storage/logs storage/framework/cache storage/framework/sessions storage/framework/views bootstrap/cache
