--- a/apps/backend/Dockerfile.prod
+++ b/apps/backend/Dockerfile.prod
@@ -38,4 +38,4 @@ RUN chown -R www-data:www-data /var/www/html
 EXPOSE 8080
 
 # Start Octane with FrankenPHP worker mode
-ENTRYPOINT ["php", "artisan", "octane:frankenphp", "--host=0.0.0.0", "--port=8080", "--workers=auto", "--max-requests=500"]
+ENTRYPOINT ["sh", "-c", "php artisan package:discover --ansi && php artisan optimize && php artisan octane:frankenphp --host=0.0.0.0 --port=8080 --workers=auto --max-requests=500"]
