feat: automated versioning with release-please + commitlint
- Add release-please GitHub Action for auto version bumps from conventional commits
- Change build-android.yml trigger: push → on release published
- Add commitlint + husky commit-msg hook to enforce conventional commits
- Add release-please-config.json and .release-please-manifest.json

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "version:major": "cd apps/client && npm version major --no-git-tag-version && cd ../.. && node scripts/sync-version.mjs"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.4.1",
+    "@commitlint/config-conventional": "^20.4.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "typescript": "^5.4.0"
