--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -1,12 +1,8 @@
 name: Build Android APK
 
 on:
-  push:
-    branches: [main]
-    paths:
-      - "apps/client/**"
-      - "packages/**"
-      - ".github/workflows/build-android.yml"
+  release:
+    types: [published]
   workflow_dispatch:
 
 permissions:
@@ -78,28 +74,18 @@ jobs:
             -Pandroid.injected.signing.key.alias=${{ secrets.KEY_ALIAS }} \
             -Pandroid.injected.signing.key.password=${{ secrets.KEY_PASSWORD }}
 
-      - name: Rename APK
+      - name: Upload APK to Release
+        if: github.event_name == 'release'
         run: |
-          cp apps/client/android/app/build/outputs/apk/release/app-release.apk cerdas-v${{ steps.version.outputs.version }}.apk
-
-      - name: Get short SHA
-        id: sha
-        run: echo "short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
-      - name: Create/Update Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ steps.version.outputs.version }}
-          name: "🚀 Cerdas v${{ steps.version.outputs.version }}"
-          body: |
-            **Cerdas v${{ steps.version.outputs.version }}** — build `${{ steps.sha.outputs.short }}`
-
-            Built on: ${{ github.event.head_commit.timestamp }}
-            Commit: ${{ github.event.head_commit.message }}
-
-            ---
-            📱 Download `cerdas-v${{ steps.version.outputs.version }}.apk` below and install on your Android device.
-          files: cerdas-v${{ steps.version.outputs.version }}.apk
-          make_latest: true
+          VERSION="${{ steps.version.outputs.version }}"
+          cp apps/client/android/app/build/outputs/apk/release/app-release.apk cerdas-v${VERSION}.apk
+          gh release upload "${{ github.event.release.tag_name }}" cerdas-v${VERSION}.apk --clobber
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload APK (manual trigger)
+        if: github.event_name == 'workflow_dispatch'
+        uses: actions/upload-artifact@v4
+        with:
+          name: cerdas-v${{ steps.version.outputs.version }}.apk
+          path: apps/client/android/app/build/outputs/apk/release/app-release.apk
