--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Install Composer dependencies
         working-directory: apps/backend
-        run: composer install --no-interaction --prefer-dist --no-progress
+        run: composer install --no-interaction --prefer-dist --no-progress --no-scripts
 
       - name: Run Laravel Pint (dry-run)
         working-directory: apps/backend
