--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -25,6 +25,9 @@ on:
         required: false
       GITHUB_TOKEN:
         required: false
+
+  workflow_dispatch:
+    inputs:
       tag_name:
         description: "Tag name to upload release to (e.g. cerdas-v0.1.0)"
         required: true
