--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -8,6 +8,7 @@ permissions:
   contents: write
   pull-requests: write
   packages: write
+  id-token: write # Tambahkan ini
 
 jobs:
   release-please:
@@ -23,7 +24,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-  # Trigger Android Build immediately after release is created
   trigger-android-build:
     needs: release-please
     if: needs.release-please.outputs.release_created == 'true'
