--- a/apps/client/android/app/build.gradle
+++ b/apps/client/android/app/build.gradle
@@ -49,15 +49,18 @@ android {
             if (!_keyAlias && project.hasProperty('android.injected.signing.key.alias')) {
                 _keyAlias = project.property('android.injected.signing.key.alias')
             }
-            if (!_keyPassword && project.hasProperty('android.injected.signing.key.password')) {
                 _keyPassword = project.property('android.injected.signing.key.password')
             }
 
+            println "DEBUG: Signing Config - Keystore Path: " + _keystorePath
+            println "DEBUG: Signing Config - Alias: " + _keyAlias
             if (_keystorePath) {
                 storeFile project.file(_keystorePath)
                 storePassword _keystorePassword
                 keyAlias _keyAlias
                 keyPassword _keyPassword
+            } else {
+                println "WARNING: No keystore path found. Build will be unsigned."
             }
         }
     }
