fix(ci): fail build if signing missing and verify keystore file

--- a/apps/client/android/app/build.gradle
+++ b/apps/client/android/app/build.gradle
@@ -60,8 +60,11 @@ android {
                 storePassword _keystorePassword
                 keyAlias _keyAlias
                 keyPassword _keyPassword
+                v1SigningEnabled true
+                v2SigningEnabled true
             } else {
                 println "WARNING: No keystore path found. Build will be unsigned."
+                throw new GradleException("KEYSTORE NOT FOUND! Keystore path is: '" + _keystorePath + "'. Cannot sign release build.")
             }
         }
     }
