feat(dev): dual android dev modes, cors fix, and healthcheck fix

--- a/apps/backend/Dockerfile.prod
+++ b/apps/backend/Dockerfile.prod
@@ -10,6 +10,10 @@ RUN install-php-extensions \
     pdo_mysql \
     opcache
 
+# Install curl for healthcheck
+RUN apk add --no-cache curl
+
+
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
