--- a/apps/backend/Dockerfile.prod
+++ b/apps/backend/Dockerfile.prod
@@ -36,7 +36,8 @@ RUN composer dump-autoload --optimize --no-scripts
 RUN mkdir -p storage/logs storage/framework/cache storage/framework/sessions storage/framework/views bootstrap/cache
 
 # Set permissions
-RUN chown -R www-data:www-data /var/www/html
+# Set permissions to UID 1000 (standard for Coolify/Docker non-root)
+RUN chown -R 1000:1000 /var/www/html
 
 # Expose FrankenPHP port
 EXPOSE 8080
