--- a/apps/backend/.gitignore
+++ b/apps/backend/.gitignore
@@ -17,6 +17,8 @@
 /public/hot
 /public/storage
 /storage/*.key
+/bootstrap/cache/packages.php
+/bootstrap/cache/services.php
 /storage/pail
 /vendor
 Homestead.json
