--- a/apps/backend/Dockerfile.prod
+++ b/apps/backend/Dockerfile.prod
@@ -44,4 +44,4 @@ RUN chown -R 1000:1000 /usr/local/bin/frankenphp
 EXPOSE 8080
 
 # Start Octane with FrankenPHP worker mode
-ENTRYPOINT ["sh", "-c", "php artisan package:discover --ansi && php artisan optimize && php artisan octane:frankenphp --host=0.0.0.0 --port=8080 --workers=auto --max-requests=500"]
+ENTRYPOINT ["sh", "-c", "php artisan migrate --force && php artisan package:discover --ansi && php artisan optimize && php artisan octane:frankenphp --host=0.0.0.0 --port=8080 --workers=auto --max-requests=500"]
