--- a/apps/client/android/app/build.gradle
+++ b/apps/client/android/app/build.gradle
@@ -17,6 +17,20 @@ android {
         }
     }
 
+    flavorDimensions "default"
+    productFlavors {
+        dev {
+            dimension "default"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+            resValue "string", "app_name", "Cerdas Dev"
+        }
+        prod {
+            dimension "default"
+            resValue "string", "app_name", "Cerdas Client"
+        }
+    }
+
     signingConfigs {
         release {
             def _keystorePath = ""
