--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,7 +32,8 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost:8080/up"]
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
+      start_period: 60s
     networks:
       - coolify
       - default
