--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -29,6 +29,8 @@ services:
       - PHP_OPCACHE_ENABLE=1
       - OCTANE_SERVER=frankenphp
       - OCTANE_SERVER_NAME=:8080
+      - REVERB_PORT=8081
+      - REVERB_HOST=0.0.0.0
       - CADDY_GLOBAL_OPTIONS=auto_https off
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/up"]
@@ -65,6 +67,9 @@ services:
       timeout: 5s
       retries: 3
       start_period: 10s
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.client.loadbalancer.server.port=80"
     networks:
       - coolify
       - default
@@ -91,6 +96,9 @@ services:
       timeout: 5s
       retries: 3
       start_period: 10s
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.editor.loadbalancer.server.port=80"
     networks:
       - coolify
       - default
@@ -117,10 +125,14 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - PHP_OPCACHE_ENABLE=1
+      - SANCTUM_STATEFUL_DOMAINS=${SANCTUM_STATEFUL_DOMAINS}
+      - SESSION_DOMAIN=${SESSION_DOMAIN}
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
     healthcheck:
       disable: true
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     networks:
       - coolify
       - default
@@ -147,10 +159,14 @@ services:
       - DB_PASSWORD=${DB_PASSWORD}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - PHP_OPCACHE_ENABLE=1
+      - SANCTUM_STATEFUL_DOMAINS=${SANCTUM_STATEFUL_DOMAINS}
+      - SESSION_DOMAIN=${SESSION_DOMAIN}
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
     healthcheck:
       disable: true
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     networks:
       - coolify
       - default
