--- a/apps/backend/composer.json
+++ b/apps/backend/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
+        "openspout/openspout": "^5.3",
         "spatie/laravel-permission": "^6.24"
     },
     "require-dev": {
