fix: add shared storage volume for production uploads

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -31,7 +31,10 @@ services:
       - OCTANE_SERVER_NAME=:8080
       - REVERB_PORT=8081
       - REVERB_HOST=0.0.0.0
+      - REVERB_HOST=0.0.0.0
       - CADDY_GLOBAL_OPTIONS=auto_https off
+    volumes:
+      - app_storage:/var/www/html/storage
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/up"]
       interval: 30s
@@ -128,6 +131,8 @@ services:
       - SANCTUM_STATEFUL_DOMAINS=${SANCTUM_STATEFUL_DOMAINS}
       - SESSION_DOMAIN=${SESSION_DOMAIN}
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
+    volumes:
+      - app_storage:/var/www/html/storage
     healthcheck:
       disable: true
     depends_on:
@@ -162,6 +167,8 @@ services:
       - SANCTUM_STATEFUL_DOMAINS=${SANCTUM_STATEFUL_DOMAINS}
       - SESSION_DOMAIN=${SESSION_DOMAIN}
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
+    volumes:
+      - app_storage:/var/www/html/storage
     healthcheck:
       disable: true
     depends_on:
@@ -174,3 +181,8 @@ services:
 networks:
   coolify:
     external: true
+
+volumes:
+  mariadb_data:
+  app_storage:
+
