--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -23,13 +23,12 @@
     "@cerdas/ui": "workspace:^",
     "@codetrix-studio/capacitor-google-auth": "latest",
     "@ionic/pwa-elements": "^3.3.0",
-    "@types/leaflet": "^1.9.21",
     "editor": "^1.0.0",
     "framework7": "^9.0.2",
     "framework7-icons": "^5.0.5",
     "framework7-vue": "^9.0.2",
     "jeep-sqlite": "^2.8.0",
-    "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.18.0",
     "material-icons": "^1.13.14",
     "pinia": "^3.0.4",
     "uuid": "^13.0.0",
