--- a/packages/form-engine/package.json
+++ b/packages/form-engine/package.json
@@ -13,14 +13,14 @@
   },
   "dependencies": {
     "@cerdas/expression-engine": "workspace:^",
-    "signature_pad": "^5.1.3",
-    "leaflet": "^1.9.4"
+    "idb-keyval": "^6.2.2",
+    "maplibre-gl": "^5.18.0",
+    "signature_pad": "^5.1.3"
   },
   "devDependencies": {
     "@capacitor/camera": "^6.0.0",
     "@capacitor/geolocation": "^6.0.0",
     "typescript": "^5.0.0",
-    "vue-tsc": "^2.0.0",
-    "@types/leaflet": "^1.9.8"
+    "vue-tsc": "^2.0.0"
   }
 }
