--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-sonarjs": "^3.0.7",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "type-fest": "^5.4.4",
     "typescript": "^5.4.0"
   },
   "packageManager": "pnpm@9.0.0",
